--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,7 @@ language: fr
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Poésies de Daniel Lesueur
 url: http://www.gutenberg.org/ebooks/47324
